# ChangeLog for dev-libs/glib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.359 2009/03/15 20:59:03 maekke Exp $

  15 Mar 2009; Markus Meier <maekke@gentoo.org> glib-2.18.4-r1.ebuild:
  x86 stable, bug #260063

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org> glib-2.18.4-r1.ebuild:
  Stable on alpha, bug #249214

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org> glib-2.16.6-r1.ebuild:
  Stable on alpha, bug #249214

  15 Mar 2009; Markus Meier <maekke@gentoo.org> glib-2.16.6-r1.ebuild:
  amd64/x86 stable, bug #249214

  15 Mar 2009; Brent Baude <ranger@gentoo.org> glib-2.16.6-r1.ebuild,
  glib-2.18.4-r1.ebuild:
  Marking glib-2.16.6-r1 glib-2.18.4-r1 ppc64 for bug 249214

  13 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> glib-2.18.4-r1.ebuild:
  Oops, managed to get ~arch in ebuild

*glib-2.18.4-r1 (13 Mar 2009)
*glib-2.16.6-r1 (13 Mar 2009)

  13 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  +files/glib2-CVE-2008-4316.patch, +glib-2.16.6-r1.ebuild,
  +glib-2.18.4-r1.ebuild:
  Add versions with fixes for bug #249214

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org> glib-2.18.4.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> glib-2.18.4.ebuild:
  Marking glib-2.18.4 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> glib-2.18.4.ebuild:
  Marking glib-2.18.4 ppc64 stable for bug 260063

  02 Mar 2009; Brent Baude <ranger@gentoo.org> glib-2.16.6.ebuild:
  Marking glib-2.16.6 ppc64 for bug 245092

  16 Feb 2009; Brent Baude <ranger@gentoo.org> glib-2.16.6.ebuild:
  stable ppc, bug 245092

  15 Feb 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/glib-2.16.3-pcre-buffer-overflow.patch, -glib-2.14.3.ebuild,
  -glib-2.14.6.ebuild, -glib-2.16.3-r1.ebuild, glib-2.16.5.ebuild,
  -glib-2.18.1.ebuild, -glib-2.18.2.ebuild, -glib-2.18.3.ebuild:
  Clean up old revisions.
