@@ -25,9 +25,9 @@ DIST glib-2.16.6.tar.bz2 4575345 RMD160 3ab0a0353a4d890841cc1b5e640ea41c58e57a6e
 DIST glib-2.18.4.tar.bz2 4809051 RMD160 c47a71708fd13ade70d72d3443799d3e74a0459d SHA1 3e21395c6980e3970d5260b46ecb6b87f2482c61 SHA256 6aeb2c845e9fdc388943acdaba2f6357e3007c5ffaa8d666904679cfb40de100
 EBUILD glib-1.2.10-r5.ebuild 1764 RMD160 3873197d76271947413a28bd6dbd8b63e26c2f17 SHA1 6ff0c367278dfb37aad0c28fb64b91cfa1490702 SHA256 d4728040f6ac36972340584bedcfdee557ea18aa59bc0017a580216d9a635ef1
 EBUILD glib-2.16.5.ebuild 3293 RMD160 ec97480e4421fd5e5d46a1e1361e80f9139d6a25 SHA1 fff5c7b053e3854ebc2cb895f1a519fda26292c7 SHA256 8258289f84bdc5a11f5f34d8caa657d864744616b90d1e19b34b901d50b984c2
-EBUILD glib-2.16.6-r1.ebuild 3563 RMD160 7cd376bd3cd810d3302cf83d0b6c22342a7db3ea SHA1 e98896c0dd9da1ef8a8f0b0f3d680b9177a12079 SHA256 998c43e775bdfc8e691f69c3decc468f98bbda2f901c5fcf17a33a69498cb8bb
-EBUILD glib-2.16.6.ebuild 3471 RMD160 75483fb1ca7f0b0de5a6fb5aafac85a3310d8495 SHA1 a8e0e8f2d04bc7ff9784215a0bde81d77af52c9f SHA256 0be6014c73542e422432de73210769751603d3430e08353f1a555928a255bd02
-EBUILD glib-2.18.4-r1.ebuild 3945 RMD160 d406d27c727c3b8d52857637baa8ad3f6bc8e292 SHA1 9d3fdf6846f5061fcb42a02805cf4ffe54757989 SHA256 89079c38e73f4c93267b9d88632e1b487305718ec6271cd25f08a5a3443368b5
-EBUILD glib-2.18.4.ebuild 3798 RMD160 291d72e6dfe69ae812c676c7121cff9ab0d2bf53 SHA1 396f35abcf462249aa83b7ef32f7598f3335ed4c SHA256 54696978c9b164f94920fdc4a2024d26a45909b1b22a7ea6a44aa25dd6b7ab96
-MISC ChangeLog 43745 RMD160 89399da524297d2cee8c36350dc78438c11025b9 SHA1 0bfa299c7582c909819d22a8f7ea247b2ba1cf44 SHA256 c757c0cd9c754c13ec8c5f6f378fac8a8ee1a20a458808fa4137b30a013f98c2
+EBUILD glib-2.16.6-r1.ebuild 3562 RMD160 47659edddda4c38b9d14544b3d1c814da21cc46b SHA1 4d0182d36bdb8de7f35a325d0d2958d6ff379326 SHA256 364cb83825268671a640b47eccdd32fd229c8d4fced2c1fa845f7204221c36cd
+EBUILD glib-2.16.6.ebuild 3472 RMD160 3e930c14bb594e912d01be131a6b3c8608262bd4 SHA1 867b00bca313bad88ce9868bbda4009002d393ef SHA256 d62966affde8e9af5a88add7092cadc94e01e01f744c72e26018efb4cf100bf0
+EBUILD glib-2.18.4-r1.ebuild 3945 RMD160 56f2cfa23027f61268bc1496b62c2349e22078a9 SHA1 d477e77353222afbf00e93f991cd3a07e98ced25 SHA256 5eabfd64bbbbc2630cababa52645fcac6b63da0eac232a4ee96ec25a6ec1f358
+EBUILD glib-2.18.4.ebuild 3801 RMD160 ec68f2e0d830ac07e60f5e8699195f5ae47bffd1 SHA1 24ecfba7c61b2beb58a6d886ffaa1171b0ab3652 SHA256 5efba2948f168817b1cdbcb790c6750a4e5e5a7d59b35c1430a5b76a5943c360
+MISC ChangeLog 44143 RMD160 3ab9b142ebaa9be1ab56cc7e6c64ecac364e23ca SHA1 8999476d47c79a7d65a3a5d0d94de675c2b13230 SHA256 6f2640fcbec432b5d2e686bf981d44bbfdd99925ab9724aa9e2230b587f4a993
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
