@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/glib-2.16.6-r1.ebuild,v 1.4 2009/03/15 16:46:15 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/glib-2.16.6-r1.ebuild,v 1.5 2009/03/17 10:15:58 armin76 Exp $
 
 EAPI="prefix"
 
