@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/glib-2.16.6.ebuild,v 1.7 2009/03/02 21:01:23 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/glib-2.16.6.ebuild,v 1.8 2009/03/17 10:15:58 armin76 Exp $
 
 EAPI="prefix"
 
