@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/glib-2.18.4.ebuild,v 1.4 2009/03/11 01:54:07 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/glib-2.18.4.ebuild,v 1.6 2009/03/18 14:18:28 armin76 Exp $
 
 EAPI="prefix"
 
