@@ -1,6 +1,16 @@
 # ChangeLog for dev-libs/glib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.359 2009/03/15 20:59:03 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.362 2009/03/18 18:54:24 ranger Exp $
+
+  18 Mar 2009; Brent Baude <ranger@gentoo.org> glib-2.18.4-r1.ebuild:
+  Marking glib-2.18.4-r1 ppc for bug 249214
+
+  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> glib-2.18.4.ebuild:
+  alpha/ia64 stable wrt #260063
+
+  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> glib-2.16.6.ebuild,
+  glib-2.16.6-r1.ebuild, glib-2.18.4.ebuild, glib-2.18.4-r1.ebuild:
+  m68k stable, thanks to kolla for testing
 
   15 Mar 2009; Markus Meier <maekke@gentoo.org> glib-2.18.4-r1.ebuild:
   x86 stable, bug #260063
